...
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <!-- fragment to display our maps -->

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!--search view to search our location-->
        <androidx.appcompat.widget.SearchView
...
            android:id="@+id/locationSearchFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            app:layout_anchorGravity="bottom|right|end"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/saveLocationButton"
            android:clickable="true"
            android:visibility="gone"
            app:srcCompat="@android:drawable/ic_menu_search" />

        <Button
            android:id="@+id/saveLocationButton"
...
